# shares

./: CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL  Jenkinsfile  Makefile.am  README.md  build_linux.sh  build_macos.sh  build_windows.sh  configure.ac
src/qt/: CMakeLists.txt  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bitcoinaddressvalidator.cpp  bitcoinaddressvalidator.h  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  cryptoshares.cpp  cryptoshares.qrc  cryptoshares_locale.qrc  cryptosharesstrings.cpp  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  networkstyle.h  notificator.cpp  notificator.h  (+42 more)
src/qt/cryptoshares/: addnewaddressdialog.cpp  addnewaddressdialog.h  addnewcontactdialog.cpp  addnewcontactdialog.h  addresseswidget.cpp  addresseswidget.h  addressfilterproxymodel.cpp  addressfilterproxymodel.h  addressholder.cpp  addressholder.h  addresslabelrow.cpp  addresslabelrow.h  balancebubble.cpp  balancebubble.h  coldstakingmodel.cpp  coldstakingmodel.h  coldstakingwidget.cpp  coldstakingwidget.h  contactdropdownrow.cpp  contactdropdownrow.h  contactsdropdown.cpp  contactsdropdown.h  createproposaldialog.cpp  createproposaldialog.h  cryptosharesgui.cpp  cryptosharesgui.h  csrow.cpp  csrow.h  dashboardwidget.cpp  dashboardwidget.h  defaultdialog.cpp  defaultdialog.h  expandablebutton.cpp  expandablebutton.h  focuseddialog.cpp  focuseddialog.h  furabstractlistitemdelegate.cpp  furabstractlistitemdelegate.h  furlistrow.h  governancemodel.cpp  (+71 more)
src/qt/cryptoshares/forms/: addresseswidget.ui  coldstakingwidget.ui  createproposaldialog.ui  dashboardwidget.ui  governancewidget.ui  masternodeswidget.ui  navmenuwidget.ui  proposalcard.ui  receivewidget.ui  requestdialog.ui  send.ui  sendchangeaddressdialog.ui  sendmultirow.ui  splash.ui  topbar.ui  votedialog.ui  welcomecontentwidget.ui
src/qt/cryptoshares/res/css/: style_dark.css  style_light.css
src/qt/cryptoshares/settings/: settingsbackupwallet.cpp  settingsbackupwallet.h  settingsbittoolwidget.cpp  settingsbittoolwidget.h  settingsconsolewidget.cpp  settingsconsolewidget.h  settingsdisplayoptionswidget.cpp  settingsdisplayoptionswidget.h  settingsexportcsv.cpp  settingsexportcsv.h  settingsfaqwidget.cpp  settingsfaqwidget.h  settingsinformationwidget.cpp  settingsinformationwidget.h  settingsmainoptionswidget.cpp  settingsmainoptionswidget.h  settingsmultisenddialog.cpp  settingsmultisendwidget.cpp  settingsmultisendwidget.h  settingsnetworkwidget.cpp  settingsnetworkwidget.h  settingssignmessagewidgets.cpp  settingssignmessagewidgets.h  settingswalletoptionswidget.cpp  settingswalletoptionswidget.h  settingswalletrepairwidget.cpp  settingswalletrepairwidget.h  settingswidget.cpp  settingswidget.h
src/qt/cryptoshares/settings/forms/: settingsbittoolwidget.ui  settingsdisplayoptionswidget.ui  settingsfaqwidget.ui  (+4 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  openuridialog.ui  optionsdialog.ui  rpcconsole.ui
src/qt/locale/: cryptoshares_ar.ts  cryptoshares_de.ts  cryptoshares_en.ts  cryptoshares_en_US.ts  cryptoshares_es.ts  cryptoshares_es_ES.ts  cryptoshares_fr_FR.ts  cryptoshares_hi_IN.ts  cryptoshares_hr_HR.ts  cryptoshares_in.ts  cryptoshares_it.ts  cryptoshares_ko_KR.ts  cryptoshares_nl.ts  cryptoshares_pl.ts  cryptoshares_ru.ts  cryptoshares_tr.ts  cryptoshares_zh_CN.ts  pivx_de.ts  pivx_en.ts  pivx_en_US.ts  pivx_es.ts  pivx_es_ES.ts  pivx_fr_FR.ts  pivx_hr_HR.ts  pivx_it.ts  pivx_ko_KR.ts  pivx_nl.ts  pivx_pl.ts  pivx_ru.ts  pivx_tr.ts  pivx_zh_CN.ts
src/qt/pivx/: addnewaddressdialog.cpp  addnewcontactdialog.cpp  addnewcontactdialog.h  addresseswidget.cpp  addresseswidget.h  addressfilterproxymodel.cpp  addressfilterproxymodel.h  addressholder.cpp  addressholder.h  addresslabelrow.cpp  contactdropdownrow.cpp  contactdropdownrow.h  contactsdropdown.cpp  contactsdropdown.h  dashboardwidget.cpp  dashboardwidget.h  defaultdialog.cpp  defaultdialog.h  expandablebutton.cpp  expandablebutton.h  focuseddialog.cpp  focuseddialog.h  furabstractlistitemdelegate.cpp  furabstractlistitemdelegate.h  furlistrow.h  guitransactionsutils.cpp  guitransactionsutils.h  loadingdialog.cpp  loadingdialog.h  lockunlock.cpp  lockunlock.h  masternodeswidget.cpp  masternodeswidget.h  masternodewizarddialog.cpp  masternodewizarddialog.h  mninfodialog.cpp  mninfodialog.h  mnmodel.cpp  mnmodel.h  mnrow.cpp  (+44 more)
src/qt/pivx/forms/: dashboardwidget.ui  masternodewizarddialog.ui  receivewidget.ui  requestdialog.ui  send.ui  sendchangeaddressdialog.ui  sendcustomfeedialog.ui  topbar.ui  welcomecontentwidget.ui
src/qt/pivx/settings/: settingsbackupwallet.cpp  settingsbackupwallet.h  settingsbittoolwidget.cpp  settingsbittoolwidget.h  settingsconsolewidget.cpp  settingsconsolewidget.h  settingsdisplayoptionswidget.cpp  settingsdisplayoptionswidget.h  settingsexportcsv.cpp  settingsexportcsv.h  settingsfaqwidget.cpp  settingsfaqwidget.h  settingsinformationwidget.cpp  settingsinformationwidget.h  settingsmainoptionswidget.cpp  settingsmainoptionswidget.h  settingsmultisenddialog.cpp  settingsmultisenddialog.h  settingsmultisendwidget.cpp  settingsmultisendwidget.h  settingsnetworkwidget.cpp  settingsnetworkwidget.h  settingssignmessagewidgets.cpp  settingssignmessagewidgets.h  settingswalletoptionswidget.cpp  settingswalletoptionswidget.h  settingswalletrepairwidget.cpp  settingswalletrepairwidget.h  settingswidget.cpp  settingswidget.h
src/qt/res/: cryptoshares-qt-res.rc
src/qt/res/css/: default.css
src/qt/res/icons/: bitcoin.icns
src/qt/test/: paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
(+829 files in other folders)
